fix(css): bad align items value

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -150,7 +150,7 @@ h4 {
     //width: 100%;
     margin-right: 1rem;
     flex-direction: column;
-    align-items: left;
+    align-items: start;
     justify-content: center;
     gap: 0.5rem;
     @media only screen and (max-width: vars.$bp-large) {
